-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 3.6.0
-
None
-
Windows, Linux, gdb as well as cdb
-
3eaa734cc3eeab25a9822bd63259efb47a5a9757
QByteArrays or char[] arrays containing non-readable data are difficult to inspect.
The value for each byte is printed decimal, negative/positive if above 127, and with the correspondig ASCII character if possible. But what I'd like to see, is a hexadecimal representation for each byte.
1. The "Change Value Display Format" on the array allows to specify "Treat All Characters as Printable" or "Show Unprintable Characters as Hexadecimal". What's missing for me is: "Show All Characters as Hexadecimal"
2. The same menu allows to change the "Display Display for Object" to several string formats, a raw format (what is that?), but there's also no hex dump here.
3. You can of course change the display format for every byte to hex, but only one after another. While it is possible to select several bytes, only the last one changes it's format.
Best would be, that the format could be changed for the whole array.
Second best would be, that selecting multiple bytes allowed changing the format for all of them.